# SIH25-Tech-O-Health

./: .env-example  .gitignore  Config.ini  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
Modules/: db.py  pycss.py  qrhtml.py
